--- a/notebooks/The Annotated Transformer-dwk.ipynb
+++ b/notebooks/The Annotated Transformer-dwk.ipynb
@@ -171,9 +171,12 @@
     "    \"Define standard linear + softmax generation step.\"\n",
     "    def __init__(self, d_model, vocab):\n",
     "        super(Generator, self).__init__()\n",
+    "        # https://pytorch.org/docs/master/nn.html#linear\n",
     "        self.proj = nn.Linear(d_model, vocab)\n",
     "\n",
     "    def forward(self, x):\n",
+    "        # Applies the \\log(\\text{Softmax}(x))log(Softmax(x)) function to an n-dimensional input Tensor \n",
+    "        # https://pytorch.org/docs/master/nn.html#torch.nn.LogSoftmax\n",
     "        return F.log_softmax(self.proj(x), dim=-1)"
    ]
   },
@@ -226,6 +229,8 @@
    "source": [
     "def clones(module, N):\n",
     "    \"Produce N identical layers.\"\n",
+    "    # https://pytorch.org/docs/master/nn.html#modulelist\n",
+    "    # ModuleList can be indexed like a regular Python list, but modules it contains are properly registered, and will be visible by all Module methods.\n",
     "    return nn.ModuleList([copy.deepcopy(module) for _ in range(N)])"
    ]
   },
