--- a/notebooks/pytorch-net-structure.ipynb
+++ b/notebooks/pytorch-net-structure.ipynb
@@ -13,6 +13,32 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Digraph.gv.pdf'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "from torch.autograd import Variable\n",
+    "import torch.nn as nn\n",
+    "from graphviz import Digraph\n",
+    "\n",
     "def make_dot(var, params=None):\n",
     "    \"\"\" Produces Graphviz representation of PyTorch autograd graph\n",
     "    Blue nodes are the Variables that require grad, orange are Tensors\n",
@@ -60,16 +86,9 @@
     "                    dot.edge(str(id(t)), str(id(var)))\n",
     "                    add_nodes(t)\n",
     "    add_nodes(var.grad_fn)\n",
-    "    return dot\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch.nn as nn\n",
+    "    return dot\n",
+    "\n",
+    "\n",
     "class MyModule(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(MyModule, self).__init__()\n",
@@ -79,7 +98,13 @@
     "        # ModuleList can act as an iterable, or be indexed using ints\n",
     "        for i, l in enumerate(self.linears):\n",
     "            x = self.linears[i // 2](x) + l(x)\n",
-    "        return x"
+    "        return x\n",
+    "    \n",
+    "net = MyModule()\n",
+    "x = Variable(torch.randn(1, 1, 10, 10))\n",
+    "y = net(x)\n",
+    "g = make_dot(y)\n",
+    "g.view()"
    ]
   },
   {
@@ -99,16 +124,10 @@
     }
    ],
    "source": [
-    "import torch\n",
-    "from torch.autograd import Variable\n",
-    "import torch.nn as nn\n",
-    "from graphviz import Digraph\n",
     "\n",
-    "net = MyModule()\n",
-    "x = Variable(torch.randn(1, 1, 10, 10))\n",
-    "y = net(x)\n",
-    "g = make_dot(y)\n",
-    "g.view()\n"
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
