--- a/notebooks/The Annotated Transformer-dwk.ipynb
+++ b/notebooks/The Annotated Transformer-dwk.ipynb
@@ -58,9 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -421,17 +419,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0 1 1 1 1]\n",
+      "  [0 0 1 1 1]\n",
+      "  [0 0 0 1 1]\n",
+      "  [0 0 0 0 1]\n",
+      "  [0 0 0 0 0]]] xx\n",
+      "tensor([[[ 1,  0,  0,  0,  0],\n",
+      "         [ 1,  1,  0,  0,  0],\n",
+      "         [ 1,  1,  1,  0,  0],\n",
+      "         [ 1,  1,  1,  1,  0],\n",
+      "         [ 1,  1,  1,  1,  1]]], dtype=torch.uint8)\n"
+     ]
+    }
+   ],
    "source": [
     "def subsequent_mask(size):\n",
     "    \"Mask out subsequent positions.\"\n",
     "    attn_shape = (1, size, size)\n",
     "    subsequent_mask = np.triu(np.ones(attn_shape), k=1).astype('uint8')\n",
-    "    return torch.from_numpy(subsequent_mask) == 0"
+    "    print(subsequent_mask, \"xx\")\n",
+    "    return torch.from_numpy(subsequent_mask) == 0\n",
+    "\n",
+    "print(subsequent_mask(5))"
    ]
   },
   {
